--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,7 +12,7 @@
             <div class="form-group">
               <p class="error" <% if(!error) { %> hidden <% } %>>This email is already in use.</p>
               <label for="email">Email</label>
-              <input type="email" class="form-control" name="username" required>
+              <input type="email" class="form-control" name="username" placeholder="this@example.com" required>
             </div>
             <div class="form-group">
               <label for="password">Password</label>
