--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,15 @@
-
-    <!--FontAwesome-->
-    <script src="https://kit.fontawesome.com/2996207253.js" crossorigin="anonymous"></script>
-    <!--BS JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
-
+<!--FontAwesome-->
+<script src="https://kit.fontawesome.com/2996207253.js" crossorigin="anonymous"></script>
+<!--BS JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+    crossorigin="anonymous"></script>
+<!--FB SDK-->
+<script src="js/facebook-sdk.js" type="text/javascript"></script>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous"
+    src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v16.0&appId=484133410506715&autoLogAppEvents=1"
+    nonce="h7n1olvu"></script>
 </body>
 
 </html>
