--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,8 @@
+<p class="text-center mt-5">©2023 Javier Leon 
+    <br>
+    Check the <a href="../privacy">Privacy</a> and <a href="../terms">Terms</a>
+</p>
+
 <!--FontAwesome-->
 <script src="https://kit.fontawesome.com/2996207253.js" crossorigin="anonymous"></script>
 <!--BS JS-->
