--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,8 @@
 <%- include('partials/header') %>
 
 
-<div class="jumbotron centered">
-  <div class="container">
+<div class="jumbotron text-center pt-5">
+  <div class="container pt-5">
     <i class="fa-key fa-solid fa-6x"></i><br>
     <h1 class="display-3">Secrets</h1>
     <p class="lead">Don't keep your secrets, share them anonymously!</p>
