--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,10 +9,15 @@
 
             <!-- Makes POST request to /register route -->
             <form action="/register" method="POST">
+              <p class="error" <% if(error != 'email') { %> hidden <% } %>>This email is already in use.</p>
+              <p class="error" <% if(error != 'username') { %> hidden <% } %>>This username is already in use.</p>
               <div class="form-group">
-                <p class="error" <% if(!error) { %> hidden <% } %>>This email is already in use.</p>
+                <label for="username">Username</label>
+                <input type="text" class="form-control" name="username" autocomplete="off" required>
+              </div>
+              <div class="form-group">
                 <label for="email">Email</label>
-                <input type="email" class="form-control" name="username" placeholder="this@example.com" required>
+                <input type="email" class="form-control" name="email" placeholder="this@example.com" required>
               </div>
               <div class="form-group">
                 <label for="password">Password</label>
