--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -1,15 +1,20 @@
 <%- include('partials/header') %>
 
-<div class="jumbotron text-center">
-  <div class="container">
-    <i class="fas fa-key fa-6x"></i>
-    <h1 class="display-3">You've Discovered My Secret!</h1>
-    <p class="secret-text">Jack Bauer is my hero.</p>
-    <hr>
-    
-    <a class="btn btn-light btn-lg me-1" href="/logout" role="button">Log Out</a>
-    <a class="btn btn-dark btn-lg ms-1" href="/submit" role="button">Submit a Secret</a>
-  </div>
-</div>
+  <div class="jumbotron text-center pt-5">
+    <div class="container pt-5">
+      <i class="fas fa-key fa-6x"></i>
+      <h1 class="display-3">You've Discovered My Secret!</h1>
+      <% for(let i = (allSecrets.length - 1); i >= 0; i = i-1) { %>
+      <p class="secret-text">
+        <%= allSecrets[i].date %><br>
+          <%= allSecrets[i].username %> says "<%= allSecrets[i].secret %>"
+      </p>
+      <% } %>
+      <hr>
 
-<%- include('partials/footer') %>
+      <a class="btn btn-light btn-lg me-1" href="/logout" role="button">Log Out</a>
+      <a class="btn btn-dark btn-lg ms-1" href="/submit" role="button">Submit a Secret</a>
+    </div>
+  </div>
+
+  <%- include('partials/footer') %>
