--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -1,20 +1,24 @@
 <%- include('partials/header') %>
 
-<div class="container">
-  <div class="jumbotron centered">
-    <i class="fas fa-key fa-6x"></i>
-    <h1 class="display-3">Secrets</h1>
-    <p class="secret-text">Don't keep your secrets, share them anonymously!</p>
+  <div class="container text-center pt-5">
+    <div class="jumbotron p-5">
+      <i class="fas fa-key fa-6x"></i>
+      <h1 class="display-3">Secrets</h1>
+      <p class="secret-text">Don't keep your secrets, share them anonymously!</p>
+      <hr>
 
-    <form action="/submit" method="POST">
+      <form action="/submit" method="POST">
+        <div class="form-group">
+          <input type="hidden" name="date" value="<%= thisDate %>">
+          <input type="hidden" name="username" value="<%= username %>">
+          <input type="text" class="form-control text-center mb-2" name="secret" placeholder="What's your secret?" autocomplete="off" required>
+          <input type="checkbox" name="anonymous"><span class="px-2">Whisper your name?</span>
+          <br>
+          <button type="submit" class="btn btn-dark mt-2">Submit</button>
+        </div>
+      </form>
 
-      <div class="form-group">
-        <input type="text" class="form-control text-center" name="secret" placeholder="What's your secret?">
-      </div>
-      <button type="submit" class="btn btn-dark">Submit</button>
-    </form>
 
-
+    </div>
   </div>
-</div>
-<%- include('partials/footer') %>
+  <%- include('partials/footer') %>
